<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".DebugActivity" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_jenkins_baseurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_label_jenkins_baseurl" />

        <TextView
            android:id="@+id/info_jenkins_baseurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenkins_baseurl" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_server_baseurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_label_server_baseurl" />

        <TextView
            android:id="@+id/info_server_baseurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_baseurl" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_label_device_id" />

        <TextView
            android:id="@+id/info_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_no_value" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_device_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_label_device_password" />

        <TextView
            android:id="@+id/info_device_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_no_value" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_build_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_label_build_number" />

        <TextView
            android:id="@+id/info_build_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_no_value" />
    </TableRow>

</TableLayout>